      name and altname tags in the final TRANSFAC motifs.

MINOR CHANGES

    o write_matrix(positions): Partial argument matching allowed.

    o motif_tree(): Silence messages from ggtree.

BUG FIXES

    o create_motif(): Don't ignore the nsites argument when generating random
      motifs.

    o read_meme(): Correctly parse background if lines are prepended with a
      space.

CHANGES IN VERSION 1.14.1
-------------------------

BUG FIXES

    o read_meme(): Handle motif files with custom alphabets and no 'END'
      line in alphabet definition. Thanks to @manoloff (#24) for the bug
      report, and Spencer Nystrom for the fix (#25).

CHANGES IN VERSION 1.14.0
-------------------------

NEW FEATURES

    o enrich_motifs(mode, pseudocount): Choose whether to count motif hits
      once per sequence, and whether to add a pseudocount for P-value
      calculation.

    o New function, meme_alph(): Create MEME custom alphabet definition files.

    o merge_similar(return.clusters): Return the clusters without merging.

    o convert_motifs(): MotifDb-MotifList now available as an output format.

MINOR CHANGES

    o enrich_motifs(): RC argument now defaults to TRUE, increased max
      significance values, no.overlaps now defaults to TRUE. Additional
      columns showing the motif consensus sequence and percent of sequences
      with hits are now included.

    o scan_sequences(RC): Only print a warning if RC=TRUE for non-DNA/RNA
      motifs.

    o Reduced the size of the message when a pseudocount is added to motifs.

CHANGES IN VERSION 1.12.4
-------------------------

BUG FIXES

    o convert_motifs(): Properly handle TFBSTools class motifs with '*' as
      their strand. This was achieved by making the universalmotif object
      creator tolerant to using '*' as a user input. Thanks to David Oliver
      for the bug report (#22).

CHANGES IN VERSION 1.12.3
-------------------------

BUG FIXES
